--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=Banking System
 spring.datasource.url = jdbc:mysql://localhost:3306/spring_trial
-spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.username = <mysql user>
+spring.datasource.password = <mysql password>
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
-spring.mail.username = nilesh29082001@gmail.com
-spring.mail.password = ixtknenriuplptxg
+spring.mail.username = <Enter Email address>
+spring.mail.password = <Enter above email APP Password>
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
